add more advance, navbar, homepresent

--- a/Portfolio_ChristianLara/src/components/Proyectos.astro
+++ b/Portfolio_ChristianLara/src/components/Proyectos.astro
@@ -1,6 +1,8 @@
 ---
 import Layout from "../layouts/Layout.astro";
+//import {socials, info} = Astro.url;
 
+const { pathname } = Astro.url;
 
 ---
 <Layout title="Proyectos">
