more advance in proyectos, curriculum, about and add navbar, icons

--- a/Portfolio_ChristianLara/src/components/Curriculum.astro
+++ b/Portfolio_ChristianLara/src/components/Curriculum.astro
@@ -25,13 +25,13 @@ import ImageLogo from "../assets/logos/image.png";
       
       <style>
         .sponsors-section {
-          background: #ff6f00;
+          background: #ff4c0c;
           text-align: center;
           padding: 40px;
         }
       
         .sponsors-section h2 {
-          color: white;
+          color: rgb(255, 255, 255);
           font-size: 2rem;
           margin-bottom: 20px;
         }
@@ -61,7 +61,7 @@ import ImageLogo from "../assets/logos/image.png";
         }
       
         .sponsor-card p {
-          color: white;
+          color: rgb(0, 0, 0);
           font-size: 0.8rem;
         }
       
