--- a/Portfolio_ChristianLara/src/pages/index.astro
+++ b/Portfolio_ChristianLara/src/pages/index.astro
@@ -31,4 +31,9 @@ import Layout from '../layouts/Layout.astro';
 		<Contacto />
 		<Footer />
 	</main>
+<style>
+	body {
+		background-color: rgb(255, 255, 255);
+	}
+</style>
 </Layout>
