--- a/Portfolio_ChristianLara/src/components/About.astro
+++ b/Portfolio_ChristianLara/src/components/About.astro
@@ -3,30 +3,33 @@ import Layout from "../layouts/Layout.astro";
 import "../styles/global.css"
 import image from "../assets/image.png";
 import image2 from "../assets/github-mark-white.svg";
+import { Icon } from 'astro-icon/components';
 ---
 <Layout title="Sobre Mí">
     <html>
-
-<div class = "about-container">
-    <section class="flex flex-col md:flex-row items-center justify-between p-4 max-w-4xl mx-auto text-center md:text-left">
+        <head>
+            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@2.1.4/css/boxicons.min.css" />
+        </head>
+<div class = "about-container w-full h-screen bg-black text-white">
+    <section class="mt-15 flex flex-col md:flex-row items-center justify-between p-4 max-w-4xl mx-auto text-center md:text-justify">
         <!-- Texto más a la izquierda -->
-        <div class="md:w-1/2 md:-ml-27"> <!-- Movemos el texto más a la izquierda -->
-            <h2 class="text-5xl font-extrabold text-white font-sans">Christian Lara</h2>
-            <p class="text-orange-400 text-2xl mt-2">@Full Stack Developer</p>
-            <p class="text-base mt-4 text-gray-100 md:w-full text-justify leading-relaxed"></p>
+        <div class="md:w-3/4 md:-ml-30"> <!-- Movemos el texto más a la izquierda -->
+            <h2 class="text-5xl font-extrabold text-white font-sans"> Christian Lara </h2>
+            <p class="mt-5 text-orange-400 text-2xl mt-2">@Full Stack Developer</p>
+            <p class="text-base mt-7 text-gray-100 md:w-full text-justify leading-relaxed"></p>
                 Apasionado por el desarrollo web y la tecnología, creando experiencias digitales atractivas y funcionales.
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi voluptatibus voluptatum iste animi molestiae consequuntur, inventore qui, exercitationem, ut eaque tenetur.
                 Quidem accusamus atque vel quaerat laudantium error, dignissimos earum.
             </p>
-            <div class="mt-8 flex flex-wrap gap-4 justify-center md:justify-start">
-                <a href="#" class="border-2 border-orange-500 px-2 py-2 rounded-lg text-pink-400 hover:bg-pink-500 hover:text-white transition"><img src={image2.src} /></a>
-                <a href="#" class="border-2 border-pink-500 px-4 py-2 rounded-lg text-pink-400 hover:bg-pink-500 hover:text-white transition">LinkedIn</a>
-                <a href="#" class="border-5 border-pink-500 px-2 py-2 rounded-lg text-pink-400 hover:bg-pink-500 hover:text-white transition">Email</a>
+            <div class="mt-10 flex flex-wrap gap-4 justify-center md:justify-start">
+                <a href="https://github.com/ChristianLaraa" class="border-4 border-pink-500 px-2 py-2 rounded-lg text-pink-400 hover:bg-pink-500 hover:text-white transition"><i class='bx bxl-github'></i> GitHub</a>
+                <a href="https://www.linkedin.com/in/christian-gael-lara-martinez-1252251bb/" class="border-4 border-pink-500 px-2 py-2 rounded-lg text-pink-400 hover:bg-pink-500 hover:text-white transition"><i class='bx bxl-linkedin-square'></i> Linkedin</a>
+                <a href="#" class="border-4 border-pink-500 px-2 py-2 rounded-lg text-pink-400 hover:bg-pink-500 hover:text-white transition"><i class='bx bx-envelope' ></i> christianlara225@aragon.unam.mx</a>
             </div>
         </div>
         <!-- Imagen más a la derecha -->
         <div class="md:w-1/2 flex justify-center md:justify-end md:ml-25"> <!-- Movemos la imagen más a la derecha -->
-            <img src={image.src} alt="Foto de perfil" class="w-80 h-80 rounded-full border-4 border-white shadow-lg" />
+            <img src={image.src} alt="Foto de perfil" class="size-xs w-80 h-80 rounded-full border-4 border-white shadow-lg" />
         </div>
     </section>
     
