--- a/Portfolio_ChristianLara/src/components/Landing.astro
+++ b/Portfolio_ChristianLara/src/components/Landing.astro
@@ -1,17 +1,25 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import Foto from "/Users/christianlara/Desktop/Portafolio/Portfolio_ChristianLara/public/bckg.gif";
 ---
 
 <Layout title="Landing-Christian Lara">
-    <article class="w-full h-[500px] overflow-hidden flex flex-col items-center justify-center relative md:px-20 xs:px-0">
-        <header class="landing-header text-center absolute top-0 z-10">
-            <span class="block font-bold sm:text-[55px] sm:leading-[63px] xxs:text-[36px] xs:text-[26px] ">Passionate young programmer</span>
-            <span class="block font-bold sm:text-[55px] sm:leading-[63px] xxs:text-[36px] xs:text-[26px] ">crafting digital dreams with</span>
-            <span class="block font-bold sm:text-[55px] sm:leading-[63px] xxs:text-[36px] xs:text-[26px] ">creative code wizardry.</span>
+<div class="landing">
+    <article class="w-full h-[100vh] overflow-hidden flex flex-col items-center justify-center relative md:px-20 xs:px-0">
+        <header class="mt-15 landing-header text-center absolute top-0 z-10">
+            <span class="block font-bold sm:text-[4rem] sm:leading-[5rem] xxs:text-[36px] xs:text-[26px] ">Passionate young programmer</span>
+            <span class="block font-bold sm:text-[4rem] sm:leading-[5rem] xxs:text-[36px] xs:text-[26px] ">crafting digital dreams with</span>
+            <span class="block font-bold sm:text-[4rem] sm:leading-[5rem] xxs:text-[36px] xs:text-[26px] ">creative code wizardry.</span>
          </header>
      
-        <img src="/image1.png" alt="#" class="object-cover relative h-[900px] object-top lg:-bottom-[50%] lg:w-[800px] md:w-[1000px] md:-bottom-[40%] xxs:-bottom-[30%] xs:w-[1500px] xs:-bottom-[10%] ">
+        <img src={Foto.src} alt="#" class="object-cover relative h-[900px] object-top lg:-bottom-[45%] lg:w-[700px] md:w-[1000px] md:-bottom-[40%] xxs:-bottom-[30%] xs:w-[1500px] xs:-bottom-[10%] ">
         
      </article>
-     
+    </div>    
+<style>
+    .landing {
+        background: #0032A0;
+        color: #EDFF44;
+    }
+</style>
 </Layout>
