--- a/Portfolio_ChristianLara/src/components/Proyectos.astro
+++ b/Portfolio_ChristianLara/src/components/Proyectos.astro
@@ -1,26 +1,31 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import { projects } from '../assets/data';
-import ProjectCard from './ProyectosCards.astro';
-
+import ProjectCard from '../components/ProyectosCards.astro';
 ---
-<Layout title="Proyectos">
-  <div
-  class="scroll-mt-36 w-[75%] mx-auto mt-20 mb-10"
-  id="projects"
->
-  <h2 class="font-bold w-fit md:mx-0 md:ml-5 sm:text-6xl xs:text-5xl xs:mx-auto">Projects</h2>
-</div>
 
-<div class="grid mx-auto gap-6 mb-8 xl:grid-cols-4 xl:w-4/5 lg:grid-cols-3 md:w-[85%] md:grid-cols-2 xs:grid-cols-1 xs:w-[90%]">
-  {
-     projects.map((card) => (
+<Layout title="Proyectos">
+  <div class="proyectos">
+    <div class="scroll-mt-36 w-[75%] mx-auto mt-20 mb-10" id="projects">
+      <h2 class="font-bold w-fit md:mx-0 md:ml-5 sm:text-6xl xs:text-5xl xs:mx-auto">PROYECTOS</h2>
+    </div>
+
+    <div class="grid mx-auto gap-6 mb-8 xl:grid-cols-4 xl:w-4/5 lg:grid-cols-3 md:w-[85%] md:grid-cols-2 xs:grid-cols-1 xs:w-[90%]">
+      {projects.map((card) => (
         <ProjectCard
-           title={card.title}
-           description={card.description}
-           image={card.image}
+          title={card.title}
+          description={card.description}
+          image={card.image}
         />
-     ))
-  }
-</div>
+      ))}
+    </div>
+  </div>
+
+  <style>
+    .proyectos {
+      background-color: #FF4AC4;
+      color: white;
+      padding: 2rem;
+    }
+  </style>
 </Layout>
