add more advance and check corrections in projects

--- a/Portfolio_ChristianLara/src/components/About.astro
+++ b/Portfolio_ChristianLara/src/components/About.astro
@@ -15,7 +15,7 @@ import { Icon } from 'astro-icon/components';
         <!-- Texto más a la izquierda -->
         <div class="md:w-3/4 md:-ml-30"> <!-- Movemos el texto más a la izquierda -->
             <h2 class="text-5xl font-extrabold text-white font-sans"> Christian Lara </h2>
-            <p class="mt-5 text-orange-400 text-2xl mt-2">@Full Stack Developer</p>
+            <p class="cargo mt-5 text-2xl mt-2">@ - Estudiante en Ingenieria en Computación</p>
             <p class="text-base mt-7 text-gray-100 md:w-full text-justify leading-relaxed"></p>
                 Apasionado por el desarrollo web y la tecnología, creando experiencias digitales atractivas y funcionales.
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi voluptatibus voluptatum iste animi molestiae consequuntur, inventore qui, exercitationem, ut eaque tenetur.
@@ -40,7 +40,9 @@ import { Icon } from 'astro-icon/components';
         color: white;
         padding: 20px;
     }
-
+    .cargo {
+        color: #ff4c0c;
+    }
 </style>
 
 </body>
