--- a/Portfolio_ChristianLara/src/layouts/Layout.astro
+++ b/Portfolio_ChristianLara/src/layouts/Layout.astro
@@ -2,7 +2,7 @@
 const {title} = Astro.props;
 
 import '../assets/style.css';
-import { ViewTransitions } from 'astro:transitions';
+import { ClientRouter } from 'astro:transitions';
 ---
 
 <!doctype html>
@@ -49,7 +49,7 @@ import { ViewTransitions } from 'astro:transitions';
       </script>
 
       <!--=============== View Transition ===============-->
-      <ViewTransitions />
+      <ClientRouter />
 	</head>
 	<body class="bg-black text-white">
 	   <slot />
