--- a/Portfolio_ChristianLara/src/components/Habilidades.astro
+++ b/Portfolio_ChristianLara/src/components/Habilidades.astro
@@ -5,7 +5,7 @@ import SkillsCards from './HabilidadesCards.astro';
 ---
 
 <Layout title="Habilidades">
- <!--<div class="skills bg-yellow-300 text-blue-600 p-6">
+ <div class="skills bg-yellow-300 text-blue-600 p-6">
     <h1 class="hab font-bold text-center mb-6">HABILIDADES</h1>
     
     <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 text-center">
@@ -55,114 +55,20 @@ import SkillsCards from './HabilidadesCards.astro';
         </div>
       </div>
 
+      <div class="bg-white p-6 rounded-lg shadow-lg">
+        <h2 class="mb-6 text-2xl font-semibold">Soft Skills</h2>
+        <div class="flex flex-wrap justify-center gap-4">
+          <img src="/src/components/icons/tools/git.svg" alt="Git" class="w-20 h-20 mt-2" />
+          <img src="/src/components/icons/tools/github.svg" alt="GitHub" class="w-16 h-16" />
+          <img src="/src/components/icons/tools/docker.svg" alt="Docker" class="w-16 h-16" />
+          <img src="/src/components/icons/tools/debian.svg" alt="Debian" class="w-16 h-16" />
+          <img src="/src/components/icons/tools/Figma.svg" alt="Figma" class="w-16 h-16" />
+        </div>
+      </div>
+
     </div>
   </div>
- --> 
-<div class = "skills2">
-  <div
-  class="w-[75%] mx-auto mb-10"
-  data-tech-h1
->
-  <h2 class="cursor-pointer font-bold w-fit md:mx-0 md:ml-5 sm:text-6xl xs:text-[40px] xs:mx-auto">Habilidades</h2>
-</div>
-
-<!--=============== Slider ===============-->
-<h2 class="cursor-pointer font-bold w-fit md:mx-0 md:ml-5 sm:text-4xl xs:text-[40px] xs:mx-auto">Lenguajes de Programación</h2>
-<div
-  class="overflow-x-hidden whitespace-nowrap cursor-pointer"
-  data-tech-wrapper
->
-  <div class="tech-card inline-block">
-     {
-        technologies.map((tech) => (
-           <div class="inline-block m-0">
-              <SkillsCards
-                 text={tech.text}
-                 logo={tech.logo}
-              />
-           </div>
-        ))
-     }
-  </div>
-</div>
-
-
-
-<!--=============== Modal ===============-->
-<div 
-  class=" w-screen h-screen bg-black/70 fixed top-0 left-0 z-[100] justify-center items-center hidden"
-  data-tech-modal
->
-  <div
-     class="modal-tech tech-modal w-4/5 h-[70%] overflow-y-auto flex flex-wrap justify-center items-center gap-x-5 gap-y-4 bg-violet-600"
-     data-tech-stop
-  >
-     {
-        technologies.map((tech) => (
-           <div class="inline-block m-0">
-              <SkillsCards
-                 text={tech.text}
-                 logo={tech.logo}
-              />
-           </div>
-        ))
-     }
-  </div>
-</div>
-
-
-<!--=============== Data ===============-->
-<div
-class="w-[75%] mx-auto mb-10" data-tech-h1>
-</div>
-<h2 class="cursor-pointer font-bold w-fit md:mx-0 md:ml-5 sm:text-4xl xs:text-[40px] xs:mx-auto">Analisis de Datos</h2>
-<div
-class="overflow-x-hidden whitespace-nowrap cursor-pointer"
-data-tech-wrapper
->
-<div class="tech-card inline-block">
-   {
-      data.map((data) => (
-         <div class="inline-block m-0">
-            <SkillsCards
-               text={data.text}
-               logo={data.logo}
-            />
-         </div>
-      ))
-   }
-</div>
-</div>
-
-
-
-<!--=============== Data ===============-->
-<div 
-class=" w-screen h-screen bg-black/70 fixed top-0 left-0 z-[100] justify-center items-center hidden"
-data-tech-modal
->
-<div
-   class="modal-tech tech-modal w-4/5 h-[70%] overflow-y-auto flex flex-wrap justify-center items-center gap-x-5 gap-y-4 bg-violet-600"
-   data-tech-stop
->
-   {
-      data.map((data) => (
-         <div class="inline-block m-0">
-            <SkillsCards
-               text={data.text}
-               logo={data.logo}
-            />
-         </div>
-      ))
-   }
-</div>
-</div>
-
-
-
-
-        </div>
-
+ 
   <style>
     .skills {
       background: #f0fc44;
