--- a/Portfolio_ChristianLara/src/components/Contacto.astro
+++ b/Portfolio_ChristianLara/src/components/Contacto.astro
@@ -3,21 +3,22 @@ import Layout from "../layouts/Layout.astro";
 ---
 <Layout title = "Contacto">
 
-    <section class="contacto relative flex flex-col-reverse items-center max-w-screen-xl px-4 mx-auto md:flex-row p-14 md:py-[60px] md:px-20" id="contact">
+<div class = "contacto">
+    <section class="relative flex flex-col-reverse items-center max-w-screen-xl px-4 mx-auto md:flex-row p-14 md:py-[60px] md:px-20" id="contact">
         <div class="row items-center py-5 md:w-5/12 md:pb-20 md:pt-10">
             <div class="text-left space-y-3">
                 <form class="ml-auo space-y-4">
-                    <input type='text' placeholder='Your Name'
+                    <input type='text' placeholder='Nombre'
                         class="w-full rounded-md py-2.5 px-4 border-black border-2 placeholder:text-slate-400" />
-                    <input type='email' placeholder='Your Email'
+                    <input type='email' placeholder='Email'
                         class="w-full rounded-md py-2.5 px-4 border-black border-2 placeholder:text-slate-400" />
-                    <input type='text' placeholder='Subject'
+                    <input type='text' placeholder='Asunto'
                         class="w-full rounded-md py-2.5 px-4 border-black border-2 placeholder:text-slate-400" />
-                    <textarea placeholder='How can I help?' rows="6"
+                    <textarea placeholder='¿En que te puedo ayudar?' rows="6"
                         class="w-full rounded-md px-4 pt-2.5 border-black border-2 placeholder:text-slate-400"></textarea>
                     <div class="grid grid-rows-1 grid-flow-col gap-2">
                         <button type='button'
-                            class="text-white bg-black font-semibold rounded-md text-sm px-4 py-2.5 w-full">Get In Touch
+                            class="text-white bg-black font-semibold rounded-md text-sm px-4 py-2.5 w-full">Enviar
                         </button>
                     </div>
                 </form>
@@ -32,17 +33,17 @@ import Layout from "../layouts/Layout.astro";
                     I seek to push the limits of creativity to create high-engaging, user-friendly, and memorable interactive experiences.
                 </p>
                 <p class="text-2xl font-medium md:pt-8">
-                    Youremail@email.com <br>
-                    1234567890
+                    christianlara225@aragon.unam.mx <br>
+                    5636538990
                 </p>
             </div>
         </div>
     </section>
-
+</div>
 <style>
     .contacto {
-        background-color: #000000;
-        color: rgb(255, 255, 255);
+        background-color: #ffffff;
+        color: rgb(0, 0, 0);
     }
 </style>
 
